--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,4 +1,8 @@
-<h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
+<img id="logo" src="/images/shrimp.png" alt="actionshrimp"/>
+<div id="title-block">
+	<h1 id="title"><a href="{{ root_url }}/">{{ site.title }}</a></h1>
+	<div id="subtitle">{{ site.subtitle }}</div>
+</div>
 <nav id="main-nav">{% include navigation.html %}</nav>
 <nav id="mobile-nav">
 	<div class="alignleft menu">
