--- a/sass/base/_font.scss
+++ b/sass/base/_font.scss
@@ -1,5 +1,7 @@
 $font-default: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-mono: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace;
+$font-decorative: "Pacifico", cursive;
+$font-serif: "Bree Serif", serif;
 
 $font-icon: FontAwesome;
 $font-icon-path: "/font/fontawesome-webfont";
