--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -19,9 +19,11 @@ body{
 }
 h1{
 	font-size: 1.8em;
+	font-family: $font-decorative;
 }
 h2{
 	font-size: 1.5em;
+	font-family: $font-serif;
 }
 h3{
 	font-size: 1.3em;
