More style tweaks, got rid of /blog part of url

--- a/sass/base/_color.scss
+++ b/sass/base/_color.scss
@@ -5,3 +5,5 @@ $color-gray02: #999 !default;
 $color-gray03: #ccc !default;
 $color-gray04: #ddd !default;
 $color-gray05: #fff !default;
+$color-blue: #56728F !default;
+$color-orange: #FE7C25 !default;
