--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -17,13 +17,17 @@ body{
 		font-size: 13px;
 	}
 }
-h1{
-	font-size: 1.8em;
-	font-family: $font-decorative;
-}
-h2{
-	font-size: 1.5em;
+h1, h1 a{
+	font-size: 30px;
 	font-family: $font-serif;
+}
+h2, h2 a{
+	color: $color-blue;
+	font-size: 1.5em;
+	font-size: 25px;
+	font-family: $font-serif;
+	text-shadow: -1px -1px 0px #557,
+				  1px 1px 0px #cce;
 }
 h3{
 	font-size: 1.3em;
