--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -1,5 +1,6 @@
 $header-height: 72px;
 $subtitle-gap: 15px;
+$subtitle-offset: 4px;
 
 #header{
 	height: $header-height;
@@ -12,7 +13,6 @@ $subtitle-gap: 15px;
 		padding-bottom: 10px;
 	}
 	a{
-		color: $color-gray01;
 		@include transition(color 0.3s);
 		&:hover{
 			color: $color-main;
@@ -28,18 +28,26 @@ $subtitle-gap: 15px;
 	}
 	#title {
 		position: relative;
-		top: -$subtitle-gap;
+		top: -$subtitle-gap + $subtitle-offset;
 		font-weight: 300;
-		font-size: 30px;
 		@media screen and (max-width: 1040px){
 			float: none;
 		}
 		z-index: 1;
+		a{
+			font-family: $font-decorative;
+			color: $color-blue;
+			text-shadow: -1px -1px 0px #557,
+						  1px 1px 0px #cce;
+			&:hover{
+				color: $color-main;
+			}
+		}
 	}
 	#subtitle {
 		font-family: $font-serif;
 		position: relative;
-		top: -$header-height + $subtitle-gap;
+		top: -$header-height + $subtitle-gap + $subtitle-offset;
 		z-index: 0;
 	}
 }
@@ -56,6 +64,7 @@ $subtitle-gap: 15px;
 			display: none;
 		}
 		>li{
+			text-shadow: 0px 0px 1px #aaa;
 			margin-left: 50px;
 			@include inline-block;
 			@media screen and (max-width: 1040px){
@@ -79,14 +88,10 @@ $subtitle-gap: 15px;
 					font: 12px $font-icon;
 					padding-left: 10px;
 				}
-				&:only-child{
-					&:after{
-						content: "";
-					}
-				}
 				@media screen and (max-width: 1040px){
 					padding: 18px 0;
 				}
+				color: $color-gray01;
 			}
 		}
 		ul{
