--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -7,7 +7,7 @@ $subtitle-offset: 4px;
 	padding: 30px 0;
 	border-bottom: 1px solid $color-gray04;
 	line-height: $header-height;
-	@media screen and (max-width: 1040px){
+	@media screen and (max-width: 900px){
 		height: auto;
 		position: relative;
 		padding-bottom: 10px;
@@ -25,14 +25,14 @@ $subtitle-offset: 4px;
 	#title-block {
 		float:left;
 		height: $header-height;
+		@media screen and (max-width: 900px){
+			float: none;
+		}
 	}
 	#title {
 		position: relative;
 		top: -$subtitle-gap + $subtitle-offset;
 		font-weight: 300;
-		@media screen and (max-width: 1040px){
-			float: none;
-		}
 		z-index: 1;
 		a{
 			font-family: $font-decorative;
@@ -54,10 +54,11 @@ $subtitle-offset: 4px;
 #main-nav{
 	float: left;
 	margin-left: 30px;
-	@media screen and (max-width: 1040px){
+	@media screen and (max-width: 900px){
 		float: none;
-		margin-left: 0;
+		margin-left: 105px;
 		margin-top: 15px;
+		line-height: 30px;
 	}
 	>ul{
 		@media screen and (max-width: 600px){
@@ -67,7 +68,7 @@ $subtitle-offset: 4px;
 			text-shadow: 0px 0px 1px #aaa;
 			margin-left: 50px;
 			@include inline-block;
-			@media screen and (max-width: 1040px){
+			@media screen and (max-width: 900px){
 				margin-left: 0;
 				margin-right: 50px;
 				&:last-of-type{
@@ -88,7 +89,12 @@ $subtitle-offset: 4px;
 					font: 12px $font-icon;
 					padding-left: 10px;
 				}
-				@media screen and (max-width: 1040px){
+				&:only-child{
+					&:after{
+						content: "";
+					}
+				}
+				@media screen and (max-width: 900px){
 					padding: 18px 0;
 				}
 				color: $color-gray01;
@@ -104,7 +110,7 @@ $subtitle-offset: 4px;
 			border: 1px solid $color-gray03;
 			list-style: none;
 			display: none;
-			@media screen and (max-width: 1040px){
+			@media screen and (max-width: 900px){
 				top: 40px;
 			}
 			@include box-shadow(0 4px 8px rgba(0,0,0,0.1));
@@ -186,6 +192,7 @@ $subtitle-offset: 4px;
 	.menu{
 		position: relative;
 		width: 100%;
+		line-height: 30px;
 		.button{
 			background: #f2f2f2;
 			border: 1px solid $color-gray04;
@@ -279,7 +286,7 @@ $subtitle-offset: 4px;
 	}
 }
 #sub-nav{
-	@media screen and (max-width: 1040px){
+	@media screen and (max-width: 900px){
 		position: absolute;
 		top: 30px;
 		right: 0;
@@ -291,7 +298,7 @@ $subtitle-offset: 4px;
 		float: left;
 		margin-top: 25px;
 		position: relative;
-		@media screen and (max-width: 1040px){
+		@media screen and (max-width: 900px){
 			float: none;
 			margin-top: 15px;
 		}
@@ -324,7 +331,7 @@ $subtitle-offset: 4px;
 	.social{
 		float: left;
 		margin-right: 15px;
-		@media screen and (max-width: 1040px){
+		@media screen and (max-width: 900px){
 			float: none;
 			margin-right: 0;
 			a:last-of-type{
