fixed responsive css a bit more!

--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,7 +1,9 @@
-<div id="title-block">
+<div id="letterhead">
 	<img id="logo" src="/images/shrimp.png" alt="actionshrimp"/>
-	<h1 id="title"><a href="{{ root_url }}/">{{ site.title }}</a></h1>
-	<div id="subtitle">{{ site.subtitle }}</div>
+	<div id="titles">
+		<h1 id="title"><a href="{{ root_url }}/">{{ site.title }}</a></h1>
+		<h2 id="subtitle">{{ site.subtitle }}</h2>
+	</div>
 </div>
 <nav id="main-nav">{% include navigation.html %}</nav>
 <nav id="mobile-nav">
