--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -6,8 +6,7 @@ $subtitle-offset: 4px;
 	height: $header-height;
 	padding: 30px 0;
 	border-bottom: 1px solid $color-gray04;
-	line-height: $header-height;
-	@media screen and (max-width: 900px){
+	@media screen and (max-width: 980px){
 		height: auto;
 		position: relative;
 		padding-bottom: 10px;
@@ -18,11 +17,11 @@ $subtitle-offset: 4px;
 			color: $color-main;
 		}
 	}
-	#title-block {
+	#letterhead{
 		float:left;
-		width: 325px;
+		width: 350px;
 		height: $header-height;
-		@media screen and (max-width: 900px){
+		@media screen and (max-width: 980px){
 			float: none;
 		}
 	}
@@ -30,46 +29,59 @@ $subtitle-offset: 4px;
 		float: left;
 		padding-right: 2em;
 	}
-	#title {
+	#titles{
 		float: left;
-		position: relative;
-		top: -$subtitle-gap + $subtitle-offset;
-		font-weight: 300;
-		a{
-			font-family: $font-decorative;
-			color: $color-blue;
-			text-shadow: -1px -1px 0px #557,
-						  1px 1px 0px #cce;
-			&:hover{
-				color: $color-main;
+		#title {
+			float: none;
+			font-weight: 300;
+			margin-top: -5px;
+			a{
+				font-family: $font-decorative;
+				color: $color-blue;
+				text-shadow: -1px -1px 0px #557,
+							  1px 1px 0px #cce;
+				&:hover{
+					color: $color-main;
+				}
 			}
 		}
-	}
-	#subtitle {
-		float: left;
-		position: relative;
-		top: -$header-height + $subtitle-gap + $subtitle-offset;
-		font-family: $font-serif;
+		#subtitle {
+			float: none;
+			font-family: $font-serif;
+			font-size: 100%;
+			text-shadow: none;
+			color: $color-gray01;
+			margin-top: -5px;
+		}
 	}
 }
 #main-nav{
 	float: left;
-	margin-left: 30px;
-	@media screen and (max-width: 900px){
+	margin-left: 20px;
+	line-height: $header-height;
+	@media screen and (max-width: 980px){
 		float: none;
-		margin-left: 105px;
 		margin-top: 15px;
 		line-height: 30px;
+		margin-left: 102px;
 	}
 	>ul{
 		@media screen and (max-width: 600px){
 			display: none;
 		}
+		//@media screen and (max-width: 980px){
+		//	&:before{
+		//		content: "\f101";
+		//		color: $color-gray04;
+		//		font: 16px $font-icon;
+		//		line-height: 30px;
+		//	}
+		//}
 		>li{
 			text-shadow: 0px 0px 1px #aaa;
 			margin-left: 50px;
 			@include inline-block;
-			@media screen and (max-width: 900px){
+			@media screen and (max-width: 980px){
 				margin-left: 0;
 				margin-right: 50px;
 				&:last-of-type{
@@ -95,7 +107,7 @@ $subtitle-offset: 4px;
 						content: "";
 					}
 				}
-				@media screen and (max-width: 900px){
+				@media screen and (max-width: 980px){
 					padding: 18px 0;
 				}
 				color: $color-gray01;
@@ -111,7 +123,7 @@ $subtitle-offset: 4px;
 			border: 1px solid $color-gray03;
 			list-style: none;
 			display: none;
-			@media screen and (max-width: 900px){
+			@media screen and (max-width: 980px){
 				top: 40px;
 			}
 			@include box-shadow(0 4px 8px rgba(0,0,0,0.1));
@@ -180,6 +192,7 @@ $subtitle-offset: 4px;
 	position: relative;
 	@media screen and (max-width: 600px){
 		display: block;
+
 	}
 	a{
 		display: block;
@@ -287,7 +300,8 @@ $subtitle-offset: 4px;
 	}
 }
 #sub-nav{
-	@media screen and (max-width: 900px){
+	line-height: $header-height;
+	@media screen and (max-width: 980px){
 		position: absolute;
 		top: 30px;
 		right: 0;
@@ -297,9 +311,9 @@ $subtitle-offset: 4px;
 	}
 	.search{
 		float: left;
-		margin-top: 25px;
+		margin-top: 22px;
 		position: relative;
-		@media screen and (max-width: 900px){
+		@media screen and (max-width: 980px){
 			float: none;
 			margin-top: 15px;
 		}
@@ -332,7 +346,7 @@ $subtitle-offset: 4px;
 	.social{
 		float: left;
 		margin-right: 15px;
-		@media screen and (max-width: 900px){
+		@media screen and (max-width: 980px){
 			float: none;
 			margin-right: 0;
 			a:last-of-type{
