Some typography and layout tweaks

--- a/sass/base/_font.scss
+++ b/sass/base/_font.scss
@@ -1,6 +1,6 @@
 $font-default: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-mono: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace;
-$font-decorative: "Pacifico", sans-serif;
+$font-decorative: "Lobster", sans-serif;
 $font-serif: "Bree Serif", serif;
 
 $font-icon: FontAwesome;
