--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -2,7 +2,7 @@
 	<img id="logo" src="/images/shrimp.png" alt="actionshrimp"/>
 	<div id="titles">
 		<h1 id="title"><a href="{{ root_url }}/">{{ site.title }}</a></h1>
-		<h2 id="subtitle">{{ site.subtitle }}</h2>
+		<div id="subtitle">{{ site.subtitle }}</div>
 	</div>
 </div>
 <nav id="main-nav">{% include navigation.html %}</nav>
