abstracting common, start of guide

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -1,2 +1,2 @@
 <meta name="google-site-verification" content="5jlRIpbX9mpsM44CGBBCaL2E_T5GDkjBYwwhSaZ4f7s" />
-<link rel="stylesheet" href="./styles.scss">
+<link rel="icon" href="/images/shrimp.svg">
