add viewport meta

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -1,2 +1,3 @@
 <meta name="google-site-verification" content="5jlRIpbX9mpsM44CGBBCaL2E_T5GDkjBYwwhSaZ4f7s" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="/images/shrimp.svg">
