--- a/src/sourdough-guide/styles.scss
+++ b/src/sourdough-guide/styles.scss
@@ -26,6 +26,7 @@ a {
     width: 800px;
     margin: 0 auto;
     margin-top: 50px;
+    margin-bottom: 200px;
     font-size: 20px;
     line-height: 1.5em;
 
