--- a/src/sourdough-guide/styles.scss
+++ b/src/sourdough-guide/styles.scss
@@ -42,11 +42,12 @@ a {
     &__header-image {
         display: flex;
         justify-content: space-around;
+        margin-top: 40px;
         margin-bottom: 40px;
 
         img {
             width: 50%;
-            box-shadow: 2px 2px #0c0a02;
+            box-shadow: 2px 2px darken($charleston-green, 5%);
         }
     }
 
@@ -58,7 +59,7 @@ a {
 
         img {
             width: 50%;
-            box-shadow: 2px 2px #0c0a02;
+            box-shadow: 2px 2px darken($charleston-green, 5%);
         }
     }
 
